fix SSR flickering: set darkmode cookie when darkmode is prefered color scheme

--- a/src/app/components/accordion/accordion.component.scss
+++ b/src/app/components/accordion/accordion.component.scss
@@ -29,8 +29,8 @@
   padding: 0 1em;
 }
 
-.darkmode .FrageHeadAngeglickt,
-.FrageHeadAngeglickt {
+.FrageHeadAngeglickt,
+.FrageHeadAngeglickt:hover {
   outline: 0.2em solid var(--primary-variant-darker);
   background-color: var(--primary-variant-much-brighter);
   font-weight: 700;
